--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,133 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:fitsSystemWindows="true">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp" >
+    <ImageView android:src="@mipmap/logo_app"
+        android:layout_width="wrap_content"
+        android:layout_height="72dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="42dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/imageView" />
 
-    <LinearLayout
-        android:orientation="vertical"
+    <!-- Email Label -->
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="56dp"
-        android:paddingLeft="24dp"
-        android:paddingRight="24dp"
-        android:weightSum="1">
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"></android.support.design.widget.TextInputLayout>
 
-        <ImageView android:src="@mipmap/logo_app"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
-            android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
-
-        <!-- Email Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_email"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textEmailAddress"
-                android:hint="Email" />
-        </android.support.design.widget.TextInputLayout>
-
-        <!-- Password Label -->
-        <android.support.design.widget.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp">
-            <EditText android:id="@+id/input_password"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                android:hint="Password"/>
-        </android.support.design.widget.TextInputLayout>
-
-        <TextView android:id="@+id/link_signup"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
-            android:text="No account yet? Create one"
-            android:gravity="center"
-            android:textSize="16dip"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.22">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:padding="10dp"
-                android:text="@string/btn_enter"
-                android:textColor="#35adbd"
-                android:id="@+id/btn_enter"
-                android:onClick="keepOn"
-                android:background="@drawable/background_button_white"
-                android:layout_centerVertical="true"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_marginLeft="41dp"
-                android:layout_marginStart="41dp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="35dp"
-                android:text="@string/btn_register"
-                android:id="@+id/button"
-                android:onClick="doRegister"
-                android:clickable="true"
-                android:layout_alignTop="@+id/btn_enter"
-                android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginRight="45dp"
-                android:layout_marginEnd="45dp"
-                android:background="@drawable/background_button_white"
-                android:textColor="#35adbd" />
-        </RelativeLayout>
-
-    </LinearLayout>
-</ScrollView>
-    <!--<?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <!-- Password Label -->
+    <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="#ffffff">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"></android.support.design.widget.TextInputLayout>
+
+    <EditText android:id="@+id/input_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textPassword"
+        android:hint="Contraseña"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:textColorHint="#c2c2c2"
+        android:textIsSelectable="true"
+        android:textColorLink="#cb5858" />
+
+    <EditText android:id="@+id/input_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="textEmailAddress"
+        android:hint="Correo Electrónico"
+        android:layout_below="@+id/textView"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="40dp"
+        android:textColorHint="#c2c2c2" />
+
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
-            android:padding="10dp"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:text="@string/btn_enter"
             android:textColor="#35adbd"
             android:id="@+id/btn_enter"
             android:onClick="keepOn"
-            android:layout_marginRight="54dp"
-            android:layout_marginEnd="54dp"
-            android:layout_centerVertical="true"
-            android:layout_toLeftOf="@+id/button"
-            android:layout_toStartOf="@+id/button"
-            android:layout_centerHorizontal="true"
             android:background="@drawable/background_button_white"
-            />
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="40dp"
+            android:layout_below="@+id/input_password"
+            android:layout_toLeftOf="@+id/imageView"
+            android:layout_toStartOf="@+id/imageView" />
 
         <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
             android:text="@string/btn_register"
             android:id="@+id/button"
             android:onClick="doRegister"
             android:clickable="true"
-            android:layout_alignTop="@+id/btn_enter"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="45dp"
-            android:layout_marginEnd="45dp"
             android:background="@drawable/background_button_white"
-            />
-    </LinearLayout>-->
+            android:textColor="#35adbd"
+            android:layout_gravity="center_vertical"
+            android:layout_alignTop="@+id/btn_enter"
+            android:layout_toRightOf="@+id/imageView"
+            android:layout_toEndOf="@+id/imageView" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Iniciar Sesión"
+            android:id="@+id/textView"
+            android:layout_below="@+id/imageView"
+            android:layout_centerHorizontal="true"
+            android:textColor="#737373" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="ó"
+        android:id="@+id/textView2"
+        android:layout_below="@+id/btn_enter"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
+
+    <Button
+        android:layout_width="290dp"
+        android:layout_height="35dp"
+        android:text="@string/btn_entrar_gmail"
+        android:id="@+id/button_gmail"
+        android:onClick="doRegister"
+        android:clickable="true"
+        android:background="@drawable/background_button_white"
+        android:textColor="#35adbd"
+        android:layout_below="@+id/textView2"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp" />
+
+</RelativeLayout>
