--- a/app/src/main/res/layout/activity_list_questions.xml
+++ b/app/src/main/res/layout/activity_list_questions.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:background="@drawable/list_questions"
-    android:clickable="false"
-    android:onClick="seeQuestion">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-    <Button
+    <!--<fragment
+        android:id="@+id/list_questions_fragment"
+        android:name="com.rglucapstone.activefatherhood.questions.ListQuestionsFragment"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />-->
+
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btn_ask"
-        android:id="@+id/btn_ask"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:onClick="ask"
-        android:clickable="true" />
+        android:id="@android:id/list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
