--- a/app/src/main/res/layout/home_activity.xml
+++ b/app/src/main/res/layout/home_activity.xml
@@ -51,9 +51,17 @@
         android:layout_height="match_parent"
         android:id="@+id/content_question"
         android:layout_below="@+id/menu_toolbar">
+
+        <!--<ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="30dp"
+            android:id="@+id/browser"
+            android:src="@drawable/browser"
+            android:layout_gravity="top" />-->
+
         <fragment
             android:layout_width="455dp"
-            android:layout_height="461dp"
+            android:layout_height="435dp"
             android:name="android.webkit.WebViewFragment"
             android:id="@+id/content_tab1"
             android:layout_gravity="center_vertical"
@@ -61,11 +69,36 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <TextView
+
+        <!--<TextView
             android:layout_width="match_parent"
             android:text="Tab1"
             android:layout_height="match_parent"
-            android:layout_alignTop="@+id/content_tab1" />
+            android:layout_alignTop="@+id/content_tab1" />-->
+        <ListView
+            android:layout_width="455dp"
+            android:layout_height="435dp"
+            android:id="@+id/listQuestions"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:id="@+id/btn_ask"
+            android:text="Hacer una pregunta"
+            android:textColor="#FFFFFF"
+            android:layout_gravity="bottom"
+            android:background="@drawable/button_ask"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="10dp"
+            android:layout_marginRight="70dp"
+            android:layout_marginLeft="70dp"
+            android:clickable="true"
+            android:onClick="ask" />
+
 
     </RelativeLayout>
 
@@ -84,11 +117,15 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
 
-        <TextView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:text="Tab2"
-            android:layout_height="match_parent"
-            android:layout_alignTop="@+id/content_tab2" />
+            android:layout_height="match_parent">
+            <include
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                layout="@layout/activity_categories" >
+            </include>
+        </RelativeLayout>
 
     </RelativeLayout>
 
@@ -109,7 +146,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:text="Tab3"
+            android:text="En construcción"
             android:layout_height="match_parent"
             android:layout_alignTop="@+id/content_tab3" />
 
