--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rglucapstone.activefatherhood.MainActivity"
     android:background="@drawable/inicio">
+
     <Button
         android:layout_width="140dp"
         android:layout_height="wrap_content"
         android:id="@+id/btn_continue"
         android:layout_marginBottom="120dp"
-        android:onClick="keepOn"
+        android:onClick="doRegister"
         android:text="@string/btn_register"
         android:textColor="#ffffff"
         android:background="@drawable/background_button_inicio"
@@ -24,6 +25,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
+
     <Button
         android:layout_width="140dp"
         android:layout_height="wrap_content"
