--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,8 @@
         android:id="@+id/textView3"
         android:layout_marginTop="29dp"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp" />
+        android:layout_marginLeft="20dp"
+        android:textColor="#35adbd" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -87,9 +88,9 @@
         android:layout_width="160dp"
         android:layout_height="35dp"
         android:layout_marginTop="32dp"
-        android:text="@string/btn_register"
+        android:text="@string/btn_aceptar"
         android:id="@+id/button"
-        android:onClick="doRegister"
+        android:onClick="keepOn"
         android:clickable="true"
         android:background="@drawable/background_button_white"
         android:textColor="#35adbd"
