--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
+        android:onClick="profileOn"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:id="@+id/iconUser"
