--- a/app/src/main/res/layout/item_question.xml
+++ b/app/src/main/res/layout/item_question.xml
@@ -13,13 +13,13 @@
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp" />
 
+    <!-- Preguntas -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:gravity="left" >
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -29,7 +29,6 @@
             android:textSize="14sp"
             android:textColor="#222222"
             android:textStyle="bold" />
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,7 +38,6 @@
             android:layout_marginTop="5dp"
             android:textColor="#999999"
             android:textSize="12sp" />
-
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -52,53 +50,56 @@
             android:textColor="#666666"
             android:textSize="16sp" />
 
-        <RelativeLayout
+        <!-- Tags -->
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceSmall"
-                android:text=""
-                android:id="@+id/questionTagEnfermedades"
-                />
             <ImageView
-                android:onClick="profileOn"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
                 android:id="@+id/iconTag"
+                android:onClick="profileOn"
+                android:layout_width="13dp"
+                android:layout_height="13dp"
+                android:layout_marginRight="4dp"
                 android:src="@drawable/icon_tag"
-                android:layout_marginLeft="5dp"
-                android:layout_marginTop="5dp" />
-
+                 />
             <TextView
+                android:id="@+id/pregunta_tag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
-                android:id="@+id/questionTagBebes"
-                android:layout_marginLeft="25dp" />
-        </RelativeLayout>
+                android:textSize="12sp"
+                android:text="sdf"/>
+        </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+        <!-- Reporte -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:background="@drawable/background_border_top"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp">
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/reporte_likes"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:textColor="#d3d3d3"
                 android:text=""
-                android:id="@+id/questionReportMeGusta"
                 />
             <TextView
-                android:layout_width="match_parent"
+                android:id="@+id/reporte_respuestas"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textAlignment="center"
+                android:textSize="12sp"
+                android:textColor="#d3d3d3"
                 android:text=""
-                android:id="@+id/questionReportAnswers"
                 />
-        </RelativeLayout>
-
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
