--- a/app/src/main/res/drawable/question_background.xml
+++ b/app/src/main/res/drawable/question_background.xml
@@ -1,17 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle" >
-    <stroke
-        android:width="1dp"
-        android:color="#ddd"/>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <padding
-        android:left="3dp"
-        android:top="1dp"
-        android:right="3dp"
-        android:bottom="1dp"
-        />
-    <size
-        android:width="70dp"
-        android:height="10dp"
-        />
-</shape>
+<item>
+    <shape android:shape="rectangle">
+        <solid android:color="#BDBDBD"/>
+    </shape>
+</item>
+
+<item
+    android:left="1dp"
+    android:right="1dp"
+    android:top="1dp"
+    android:bottom="1dp">
+    <shape android:shape="rectangle">
+        <solid android:color="#ffffff"/>
+    </shape>
+</item>
+
+</layer-list>
+
+    <!-- "shadow" -->
+    <!--<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+       <item>
+          <shape android:shape="rectangle" >
+              <solid android:color="#939292"/>
+          </shape>
+          <padding></padding>
+      </item>
+
+
+      <item
+          android:left="2dp"
+          android:right="2dp"
+          android:top="2dp"
+          android:bottom="3px">
+          <shape android:shape="rectangle">
+              <solid android:color="#f7f7f7"/>
+          </shape>
+      </item>
+
+  </layer-list>-->
