--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,85 +4,77 @@
     >
 
     <TextView
+        android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Regístrate para que puedas participar"
-        android:id="@+id/textView3"
         android:layout_marginTop="29dp"
         android:layout_alignParentTop="true"
         android:layout_marginLeft="20dp"
         android:textColor="#35adbd" />
-
-    <TextView
+   <TextView
+        android:id="@+id/user"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Nombre Completo"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/textView3"
-        android:layout_alignLeft="@+id/textView3"
-        android:layout_marginTop="25dp" />
+        android:text="Nombre de usuario"
+       android:layout_alignTop="@+id/input_user"
+       android:layout_alignLeft="@+id/input_user"
+       android:layout_alignStart="@+id/input_user"
+       android:layout_marginBottom="60dp"/>
+
 
     <EditText android:id="@+id/input_nombres"
         android:layout_width="340dp"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:layout_below="@+id/textView4"
-        android:layout_alignLeft="@+id/textView4"
-        android:layout_alignStart="@+id/textView4"
-        android:layout_alignRight="@+id/textView3" />
+        android:layout_alignLeft="@+id/name"
+        android:layout_alignStart="@+id/name" />
+
+    <EditText android:id="@+id/input_user"
+        android:layout_width="340dp"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:layout_below="@+id/name"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp" />
 
     <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Nombres Completos"
+        android:id="@+id/textView4"
+        android:layout_below="@+id/user"
+        android:layout_alignLeft="@+id/correo"
+        android:layout_alignStart="@+id/correo" />
+
+    <TextView
+        android:id="@+id/correo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
         android:text="Correo Electrónico"
-        android:id="@+id/textView5"
-        android:layout_below="@+id/input_nombres"
-        android:layout_alignLeft="@+id/input_nombres"
-        android:layout_alignStart="@+id/input_nombres"
-        android:layout_marginTop="15dp" />
+        android:layout_above="@+id/editText2"
+        android:layout_alignLeft="@+id/input_correo"
+        android:layout_alignStart="@+id/input_correo" />
 
     <EditText android:id="@+id/input_correo"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textColorHint="#c2c2c2"
-        android:layout_below="@+id/textView5"
-        android:layout_alignLeft="@+id/textView5"
-        android:layout_alignStart="@+id/textView5"
-        android:layout_alignRight="@+id/input_nombres"
-        android:layout_alignEnd="@+id/input_nombres" />
-
-    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Contraseña"
-        android:id="@+id/textView6"
-        android:layout_below="@+id/input_correo"
-        android:layout_alignLeft="@+id/input_correo"
-        android:layout_alignStart="@+id/input_correo"
-        android:layout_marginTop="15dp" />
-
-    <EditText android:id="@+id/input_contrasena"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
         android:inputType="text"
         android:textColorHint="#c2c2c2"
-        android:textIsSelectable="true"
-        android:textColorLink="#cb5858"
-        android:layout_below="@+id/textView6"
-        android:layout_alignRight="@+id/input_correo"
-        android:layout_alignEnd="@+id/input_correo"
-        android:layout_alignLeft="@+id/textView6"
-        android:layout_alignStart="@+id/textView6" />
+        android:layout_below="@+id/correo"
+        android:layout_alignLeft="@+id/editText2"
+        android:layout_alignStart="@+id/editText2"
+        android:layout_alignRight="@+id/input_user"
+        android:layout_alignEnd="@+id/input_user" />
 
     <Button
         android:layout_width="160dp"
         android:layout_height="35dp"
-        android:layout_marginTop="32dp"
         android:text="@string/btn_aceptar"
         android:id="@+id/button"
         android:onClick="keepOn"
@@ -90,7 +82,41 @@
         android:background="@drawable/background_button_white"
         android:textColor="#35adbd"
         android:layout_gravity="center_vertical"
-        android:layout_below="@+id/input_contrasena"
+        android:layout_marginBottom="33dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textColorHint="#c2c2c2"
+        android:layout_below="@+id/textView6"
+        android:layout_alignLeft="@+id/input_nombres"
+        android:layout_alignStart="@+id/input_nombres"
+        android:layout_alignRight="@+id/input_nombres"
+        android:layout_alignEnd="@+id/input_nombres" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="Contraseña"
+        android:layout_marginTop="42dp"
+        android:layout_below="@+id/input_correo"
+        android:layout_alignLeft="@+id/input_correo"
+        android:layout_alignStart="@+id/input_correo" />
+
+    <EditText
+        android:id="@+id/editText2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="text"
+        android:textColorHint="#c2c2c2"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/input_user"
+        android:layout_alignStart="@+id/input_user" />
 
 </RelativeLayout>
