--- a/app/src/main/res/layout/toolbar_actionbar.xml
+++ b/app/src/main/res/layout/toolbar_actionbar.xml
@@ -4,17 +4,6 @@
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
     android:background="?attr/colorPrimary"
-    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-<!--<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:iosched="http://schemas.android.com/apk/res-auto"
-    style="@style/HeaderBar"
-    iosched:theme="@style/ActionBarThemeOverlay"
-    iosched:popupTheme="@style/ActionBarPopupThemeOverlay"
-    android:id="@+id/toolbar_actionbar"
-    iosched:titleTextAppearance="@style/ActionBar.TitleText"
-    iosched:contentInsetStart="?actionBarInsetStart"
-    android:layout_width="match_parent"
-    android:layout_height="?actionBarSize" />
--->
+    android:theme="@style/ThemeOverlay.MyApp.ActionBar"
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+    style="@style/Widget.MyApp.Toolbar.Solid"/>
