--- a/app/src/main/res/menu/action_bar.xml
+++ b/app/src/main/res/menu/action_bar.xml
@@ -1,19 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-
-    <!-- "Search", should appear as action button if possible -->
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:appcompat="http://schemas.android.com/tools">
     <item
         android:id="@+id/action_buscar"
         android:icon="@drawable/icon_search"
         android:title="@string/action_buscar"
-        app:showAsAction="ifRoom"/>
-</menu>
-<!--
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/buscar"
-        android:icon="@drawable/icon_search"
-        android:title="@string/buscar"
-        android:orderInCategory="100"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom"
         />
-</menu>-->
+</menu>
+
+<!--
+<?xml version="1.0" encoding="utf-8"?>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_buscar"
+        android:icon="@drawable/icon_search"
+        android:title="@string/action_buscar"
+        app:showAsAction="ifRoom"
+        android:actionViewClass="android.widget.SearchView"
+        />
+</menu>
+-->
