Implementacion del perfil y se agregaron campos

--- a/app/src/main/res/drawable/background_border_bottom.xml
+++ b/app/src/main/res/drawable/background_border_bottom.xml
@@ -8,8 +8,12 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="2dp"
-                android:color="@color/colorPrimary" />
+                android:color="#FFFFFF" />
             <solid android:color="#00FFFFFF" />
+            <!--<stroke
+                android:width="2dp"
+                android:color="@color/colorPrimary" />
+            <solid android:color="#00FFFFFF" />-->
         </shape>
     </item>
 </layer-list>
