--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -52,34 +52,48 @@
         android:layout_marginTop="40dp"
         android:textColorHint="#c2c2c2" />
 
+    <Button
+        android:layout_width="120dp"
+        android:layout_height="35dp"
+        android:text="@string/btn_enter"
+        android:textColor="#35adbd"
+        android:id="@+id/btn_enter"
+        android:background="@drawable/background_button_white"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="40dp"
+        android:layout_below="@+id/input_password"
+        android:layout_alignRight="@+id/button_gmail"
+        android:layout_alignEnd="@+id/button_gmail"
+        android:layout_alignLeft="@+id/button_gmail"
+        android:layout_alignStart="@+id/button_gmail" />
+    <!--
+            <Button
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:text="@string/btn_enter"
+                android:textColor="#35adbd"
+                android:id="@+id/btn_enter"
+                android:background="@drawable/background_button_white"
+                android:layout_gravity="center_vertical"
+                android:layout_marginTop="40dp"
+                android:layout_below="@+id/input_password"
+                android:layout_toLeftOf="@+id/imageView"
+                android:layout_toStartOf="@+id/imageView" />
 
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="35dp"
-            android:text="@string/btn_enter"
-            android:textColor="#35adbd"
-            android:id="@+id/btn_enter"
-            android:background="@drawable/background_button_white"
-            android:layout_gravity="center_vertical"
-            android:layout_marginTop="40dp"
-            android:layout_below="@+id/input_password"
-            android:layout_toLeftOf="@+id/imageView"
-            android:layout_toStartOf="@+id/imageView" />
-
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="35dp"
-            android:text="@string/btn_register"
-            android:id="@+id/button"
-            android:onClick="doRegister"
-            android:clickable="true"
-            android:background="@drawable/background_button_white"
-            android:textColor="#35adbd"
-            android:layout_gravity="center_vertical"
-            android:layout_alignTop="@+id/btn_enter"
-            android:layout_toRightOf="@+id/imageView"
-            android:layout_toEndOf="@+id/imageView" />
-
+            <Button
+                android:layout_width="120dp"
+                android:layout_height="35dp"
+                android:text="@string/btn_register"
+                android:id="@+id/button"
+                android:onClick="doRegister"
+                android:clickable="true"
+                android:background="@drawable/background_button_white"
+                android:textColor="#35adbd"
+                android:layout_gravity="center_vertical"
+                android:layout_alignTop="@+id/btn_enter"
+                android:layout_toRightOf="@+id/imageView"
+                android:layout_toEndOf="@+id/imageView" />
+            -->
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -103,7 +117,7 @@
     <Button
         android:layout_width="290dp"
         android:layout_height="35dp"
-        android:text="@string/btn_entrar_gmail"
+        android:text="@string/btn_entrar_facebook"
         android:id="@+id/button_gmail"
         android:clickable="true"
         android:background="@drawable/background_button_white"
