--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -12,18 +12,28 @@
         android:layout_alignParentTop="true"
         android:background="@color/colorPrimary"
         android:padding="10dp">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/profile5"
-            android:layout_gravity="center"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:layout_marginTop="5dp"
+                android:background="@drawable/ico_edit"/>
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/profile5"
+                android:layout_marginLeft="130dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Ricardo Arregui"
             android:textColor="@color/colorPrimaryLabel"
             android:textSize="15dp"
-            android:focusable=""
+            android:focusable="true"
             android:layout_gravity="center"
             android:paddingTop="7dp"
             android:textStyle="bold" />
@@ -132,14 +142,14 @@
                 android:layout_marginRight="35dp"
                 android:layout_marginLeft="25dp"
                 android:layout_marginBottom="10dp"
-                android:background="@drawable/ico_junior"
+                android:background="@drawable/ico_answer"
                 android:id="@+id/imageView3"
                 android:layout_alignParentBottom="true"
                 android:layout_toLeftOf="@+id/textView8"
                 android:layout_toStartOf="@+id/textView8" />
         </RelativeLayout>
         <RelativeLayout
-            android:layout_width="128dp"
+            android:layout_width="126dp"
             android:layout_height="37dp">
             <TextView
                 android:layout_width="wrap_content"
@@ -152,8 +162,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="false"
-                android:layout_marginRight="5dp"
-                android:layout_marginEnd="30dp"/>
+                android:layout_marginRight="15dp"
+                android:layout_marginEnd="40dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -174,12 +184,12 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true" />
             <ImageView
-                android:layout_width="20dp"
+                android:id="@+id/imageView5"
+                android:layout_width="35dp"
                 android:layout_height="20dp"
                 android:layout_marginRight="15dp"
                 android:layout_marginLeft="25dp"
-                android:background="@drawable/ico_answer"
-                android:id="@+id/imageView5"
+                android:background="@drawable/ico_junior"
                 android:layout_alignBottom="@+id/textView11"
                 android:layout_toLeftOf="@+id/textView11"
                 android:layout_toStartOf="@+id/textView11"
@@ -190,12 +200,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_line_primary"
-        android:layout_weight="0.005">
+        >
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/guru_progress_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Gurú"
+                android:textSize="12dp"
+                android:gravity="center"
+                android:layout_alignParentRight="true"
+                android:layout_alignParentEnd="true" />
+            <ProgressBar
+                android:id="@+id/guru_progress"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/guru_progress_text" />
+        </RelativeLayout>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:background="@color/colorPrimary"
         android:paddingTop="10dp">
         <RelativeLayout
             android:layout_width="132dp"
@@ -214,8 +246,10 @@
                 android:textSize="12dp"
                 android:gravity="center"
                 android:id="@+id/textView12"
+                android:textColor="@color/actionbar_title_text"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:layout_alignParentEnd="true"
+                android:textStyle="bold" />
         </RelativeLayout>
         <RelativeLayout
             android:layout_width="132dp"
@@ -234,25 +268,15 @@
                 android:textAlignment="center"
                 android:id="@+id/textView13"
                 android:layout_alignParentRight="true"
-                android:layout_alignParentEnd="true" />
+                android:textColor="@color/actionbar_title_text"
+                android:layout_alignParentEnd="true"
+                android:textStyle="bold" />
         </RelativeLayout>
-
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="348dp"
         android:orientation="vertical">
-
-        <fragment
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:name="android.webkit.WebViewFragment"
-            android:id="@+id/content_tab1"
-            android:layout_gravity="center_vertical"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true" />
-
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -260,7 +284,6 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true" />
     </LinearLayout>
-
 </LinearLayout>
 
 
