--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,122 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    >
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Regístrate para que puedas participar"
-        android:layout_marginTop="29dp"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="20dp"
-        android:textColor="#35adbd" />
-   <TextView
-        android:id="@+id/user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Nombre de usuario"
-       android:layout_alignTop="@+id/input_user"
-       android:layout_alignLeft="@+id/input_user"
-       android:layout_alignStart="@+id/input_user"
-       android:layout_marginBottom="60dp"/>
-
-
-    <EditText android:id="@+id/input_nombres"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:layout_below="@+id/textView4"
-        android:layout_alignLeft="@+id/name"
-        android:layout_alignStart="@+id/name" />
-
-    <EditText android:id="@+id/input_user"
-        android:layout_width="340dp"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:layout_below="@+id/name"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="35dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Nombres Completos"
-        android:id="@+id/textView4"
-        android:layout_below="@+id/user"
-        android:layout_alignLeft="@+id/correo"
-        android:layout_alignStart="@+id/correo" />
-
-    <TextView
-        android:id="@+id/correo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Correo Electrónico"
-        android:layout_above="@+id/editText2"
-        android:layout_alignLeft="@+id/input_correo"
-        android:layout_alignStart="@+id/input_correo" />
-
-    <EditText android:id="@+id/input_correo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textColorHint="#c2c2c2"
-        android:layout_below="@+id/correo"
-        android:layout_alignLeft="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
-        android:layout_alignRight="@+id/input_user"
-        android:layout_alignEnd="@+id/input_user" />
-
-    <Button
-        android:layout_width="160dp"
-        android:layout_height="35dp"
-        android:text="@string/btn_aceptar"
-        android:id="@+id/button"
-        android:onClick="keepOn"
-        android:clickable="true"
-        android:background="@drawable/background_button_white"
-        android:textColor="#35adbd"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="33dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true" />
-
-    <EditText
-        android:id="@+id/editText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textColorHint="#c2c2c2"
-        android:layout_below="@+id/textView6"
-        android:layout_alignLeft="@+id/input_nombres"
-        android:layout_alignStart="@+id/input_nombres"
-        android:layout_alignRight="@+id/input_nombres"
-        android:layout_alignEnd="@+id/input_nombres" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Contraseña"
-        android:layout_marginTop="42dp"
-        android:layout_below="@+id/input_correo"
-        android:layout_alignLeft="@+id/input_correo"
-        android:layout_alignStart="@+id/input_correo" />
-
-    <EditText
-        android:id="@+id/editText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="text"
-        android:textColorHint="#c2c2c2"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/input_user"
-        android:layout_alignStart="@+id/input_user" />
-
-</RelativeLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingLeft="15dp"
+    android:paddingRight="15dp">
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:text="Regístrate para que puedas participar"
+            android:layout_marginTop="40dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginLeft="20dp"
+            android:textSize="18dp"
+            android:textColor="#35adbd" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- User -->
+        <EditText android:id="@+id/input_user"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Nombre de usuario"
+            android:layout_below="@+id/textView"
+            android:layout_marginTop="30dp"
+            android:textSize="16dp"
+            android:textColorHint="#c2c2c2" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- Names -->
+        <EditText android:id="@+id/input_names"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:hint="Nombres Completos"
+            android:layout_marginTop="25dp"
+            android:textSize="16dp"
+            android:textColorHint="#c2c2c2" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- Email -->
+        <EditText android:id="@+id/input_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:hint="Correo Electrónico"
+            android:layout_marginTop="25dp"
+            android:textSize="16dp"
+            android:textColorHint="#c2c2c2" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <!-- Password -->
+        <EditText android:id="@+id/input_contraseña"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:hint="Contraseña"
+            android:layout_marginTop="25dp"
+            android:textSize="16dp"
+            android:textColorHint="#c2c2c2" />
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top">
+        <Button
+            android:layout_width="160dp"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_aceptar"
+            android:id="@+id/button"
+            android:onClick="keepOn"
+            android:clickable="true"
+            android:background="@drawable/background_button_white"
+            android:textColor="#35adbd"
+            android:layout_gravity="center_vertical"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentTop="false"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentStart="false"
+            android:layout_alignWithParentIfMissing="false"
+            android:layout_alignParentRight="false"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="30dp" />
+    </RelativeLayout>
+</LinearLayout>
