Nuevos ajustes de plublicaciones y padres gurus

--- a/app/src/main/res/layout/activity_question.xml
+++ b/app/src/main/res/layout/activity_question.xml
@@ -12,7 +12,7 @@
         <include
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            layout="@layout/item_question" >
+            layout="@layout/fragment_item_question" >
         </include>
 
     </LinearLayout>
