--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,38 +7,10 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.rglucapstone.activefatherhood.MainActivity"
-    android:background="@drawable/inicio">
+    tools:context=".activities.MainActivity">
 
-    <Button
-        android:layout_width="140dp"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/btn_continue"
-        android:layout_marginBottom="120dp"
-        android:onClick="doRegister"
-        android:text="@string/btn_register"
-        android:textColor="#ffffff"
-        android:background="@drawable/background_button_inicio"
-        android:clickable="true"
-        android:layout_marginRight="32dp"
-        android:layout_marginEnd="20dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
-    <Button
-        android:layout_width="140dp"
-        android:layout_height="wrap_content"
-        android:id="@+id/btn_login"
-        android:onClick="showLogin"
-        android:text="@string/btn_login"
-        android:textColor="#ffffff"
-        android:background="@drawable/background_button_inicio"
-        android:clickable="true"
-        android:contentDescription="@string/btn_login"
-        android:layout_alignTop="@+id/btn_continue"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="20dp" />
-
+        android:text="Hello World!" />
 </RelativeLayout>
