--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,21 +1,13 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- App Style-->
+<resources>
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-            <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="android:actionBarStyle">@style/ActionBarTheme</item>
+    <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
     </style>
-
-    <!-- Action Bar Theme -->
     <style name="ActionBarTheme" parent="@style/AppTheme">
         <item name="android:background">@color/colorPrimary</item>
-        <item name="android:color">@color/lightGrey</item>
-    </style>
-    <style name="Widget.MyApp.Toolbar.Solid" parent="Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/actionbar_color</item>
-        <item name="android:elevation" tools:ignore="NewApi">4dp</item>
-    </style>
-    <style name="ThemeOverlay.MyApp.ActionBar" parent="ThemeOverlay.AppCompat.ActionBar">
-        <!-- Parent theme sets colorControlNormal to textColorPrimary. -->
-        <item name="android:textColorPrimary">@color/actionbar_title_text</item>
     </style>
 </resources>
